<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>dev.simplix</groupId>
    <artifactId>protocolize</artifactId>
    <version>2.0.0</version>
    <packaging>pom</packaging>

    <modules>
        <module>protocolize-api</module>
        <module>protocolize-velocity</module>
        <module>protocolize-bungeecord</module>
    </modules>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>

        <build.number>unknown</build.number>
        <bungeecord.version>1.17-R0.1-SNAPSHOT</bungeecord.version>
        <velocity.version>3.0.0</velocity.version>
    </properties>

    <repositories>
        <repository>
            <id>exceptionflug</id>
            <url>https://mvn.exceptionflug.de/repository/exceptionflug-public/</url>
        </repository>
        <repository>
            <id>bungeecord-repo</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </repository>
        <repository>
            <id>velocity</id>
            <url>https://repo.velocitypowered.com/snapshots/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.20</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.30</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

</project>